--- a/static/icons/final/preview.html
+++ b/static/icons/final/preview.html
@@ -23,6 +23,9 @@
 
 		<h1>CUSTOM PREVIEW - you can change this in the previewTemplate option</h1>
 			<pre><code>.icon-social--twitter:</code></pre><div class="icon-social--twitter" style="width: 400px; height: 300px;" ></div><hr/>
+			<pre><code>.icon-weare-nobg:</code></pre><div class="icon-weare-nobg" style="width: 400px; height: 300px;" ></div><hr/>
+			<pre><code>.icon-weare:</code></pre><div class="icon-weare" style="width: 400px; height: 300px;" ></div><hr/>
+			<pre><code>.icon-wheat:</code></pre><div class="icon-wheat" style="width: 400px; height: 300px;" ></div><hr/>
 
 		<h2 id="embedded-svg-option">Embedded SVG option</h2>
 		<p>(The <code>data-grunticon-embed</code> attribute tells grunticon to inject SVG inline):</p>
